added changes in testimonials

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               
             </div> -->
             <div class="contact-info">
-                <a class="contact-link" href="https://docs.google.com/document/d/1jdiziSE07FQLm12BgHmlsXih6ASB-Ty96By5gPknj00/export?format=pdf" download="Raj_Patil_Resume.pdf" target="_blank">Download Resume</a>
+                <a class="contact-link" href="https://docs.google.com/document/d/1jdiziSE07FQLm12BgHmlsXih6ASB-Ty96By5gPknj00/export?format=pdf" download="Pratik_Gaigole_Resume.pdf" target="_blank">Download Resume</a>
             </div>
 
 
@@ -232,12 +232,12 @@
 
         <section class="about-text">
           <p>
-            I'm a Full Stack Developer from Pune trained in Akola, passionate about tackling challenges and contributing to innovative projects. I enjoy transforming complex problems into elegant, efficient solutions.
+I'm a Data Scientist from Pune, passionate about tackling challenges and contributing to innovative, data-driven projects. I enjoy transforming complex datasets into clear, actionable insights and smart solutions.
+
           </p>
 
           <p>
-            My job is to develop functional and user-friendly websites that are also visually appealing. I bring a personal touch to each project, ensuring that it is not only eye-catching but also easy to use. My aim is to effectively convey your message and identity in the most innovative way possible. I have worked on various projects, enhancing my skills and making significant contributions to many reputed brands.
-          </p>
+My job is to analyze complex data and build models that drive smarter decisions and meaningful outcomes. I bring a personal touch to every project, ensuring that insights are not only accurate but also easy to understand and apply. My aim is to uncover the story behind the numbers and present it in the most impactful and innovative way possible. I have worked on various data-driven projects, continuously sharpening my skills and making significant contributions to many reputed brands.          </p>
         </section>
 
 
@@ -258,10 +258,12 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Front-End Development</h4>
+                <h4 class="h4 service-item-title">Data Analysis</h4>
 
                 <p class="service-item-text">
-                  Creating modern, high-quality designs for responsive and accessible interfaces.                </p>
+                  Uncovering trends and insights from structured and unstructured data.
+
+               </p>
               </div>
 
             </li>
@@ -273,11 +275,11 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Back-End Development
+                <h4 class="h4 service-item-title">Data Visualization
                 </h4>
 
                 <p class="service-item-text">
-                  Building robust back-end systems with Django and creating RESTful APIs for seamless integration.
+               Creating clear, interactive visuals and reports for smarter decision-making.
 
                 </p>
               </div>
@@ -291,11 +293,11 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Database Management
+                <h4 class="h4 service-item-title">Machine Learning
                 </h4>
 
                 <p class="service-item-text">
-                  Optimizing and maintaining secure, high-performance databases with a focus on data integrity and efficiency.
+                 Building intelligent models to automate tasks and predict outcomes.
 
                 </p>
               </div>
@@ -309,10 +311,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">DevOps</h4>
+                <h4 class="h4 service-item-title">Data Preparation & Wrangling</h4>
 
                 <p class="service-item-text">
-                  Enhancing development and deployment processes and ensuring application reliability and scalability.
+                  Preparing raw data for analysis through transformation and optimization.
 
                 </p>
               </div>
@@ -341,12 +343,11 @@
                   <img src="./assets/images/manisha.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Manisha Dongare</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Savita Sharma</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Raj created an excellent e-learning website for my business. His skill and dedication ensured a user-friendly platform that surpassed expectations. Highly recommended for his professionalism and technical expertise.
-                  </p>
+Pratik delivered powerful data insights that transformed how we understand our business. His expertise in analysis and machine learning brought clarity and value to complex problems. Highly recommended for his analytical mindset and problem-solving skills.                  </p>
                 </div>
 
               </div>
@@ -359,12 +360,11 @@
                   <img src="./assets/images/anjun.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Anjun Malusare</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Raj Patil</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    As Raj's Tech Lead during his internship, I've been impressed by his dedication and rapid growth. He quickly grasped complex concepts in full-stack development and consistently delivered high-quality work. Raj's proactive approach and willingness to learn make him a valuable asset to any team. I look forward to seeing his continued success in the field.
-                  </p>
+As Pratik’s lead at Inovite, I’ve been genuinely impressed by his analytical sharpness and dedication to solving real-world problems with data. He quickly adapted to our workflows, contributed impactful insights, and demonstrated strong skills in data analysis, visualization, and machine learning. Pratik’s curiosity and drive make him a valuable part of our team, and I’m excited to see his continued growth in the data science space.                  </p>
                 </div>
 
               </div>
@@ -377,12 +377,11 @@
                   <img src="./assets/images/sumeet.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Sumeet Solanki</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Kiran Ingle</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    The assistance provided on our TetraPack project, particularly in frontend development and Django framework tasks, was invaluable. The contributions made were instrumental in delivering robust solutions on time. The willingness to learn and collaborate were evident and greatly appreciated.
-                  </p>
+The support provided on our Sales Analytics Optimization project at Rajkamal Company was immensely valuable. Pratik’s expertise in data analysis, forecasting, and dashboard creation helped us uncover actionable insights and improve decision-making. His collaborative spirit and problem-solving mindset stood out and made a lasting impact on the project’s success.                  </p>
                 </div>
 
               </div>
@@ -395,11 +394,20 @@
                   <img src="./assets/images/abhi.png" alt="Henry william" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Abhishek Phapale</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Uday Ugale</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Working alongside Raj as an intern has been a rewarding experience. We've collaborated on various projects, constantly pushing each other through healthy competition. Our teamwork has been instrumental in achieving project milestones and fostering a dynamic learning environment.
+Working with Pratik has been an outstanding experience. His ability to break down complex data and translate it into strategic insights has added immense value to our projects at Inovite. He consistently brings clarity, precision, and a forward-thinking approach to every challenge. A true asset to the data science team and the organization as a whole.
+
+
+
+
+
+
+
+
+
                   </p>
                 </div>
 
