removed unwanted info

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         <div class="separator"></div>
         <ul class="social-list">
 
-          <li class="social-item">
+<!--           <li class="social-item">
             <a href="https://x.com/rxjpatil" target="_blank" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
           <li class="social-item">
             <a href="https://www.linkedin.com/in/rxjpatil" target="_blank" class="social-link">
@@ -150,11 +150,11 @@
             </a>
           </li>
 
-          <li class="social-item">
+<!--           <li class="social-item">
             <a href="https://www.youtube.com/@wtfrxj?sub_confirmation=1" target="_blank" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
           <li class="social-item">
             <a href="https://github.com/rxjpatil" target="_blank" class="social-link">
@@ -162,11 +162,11 @@
             </a>
           </li>
 
-          <li class="social-item">
+<!--           <li class="social-item">
             <a href="https://www.instagram.com/rxjpatil" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -476,7 +476,7 @@ Working with Pratik has been an outstanding experience. His ability to break dow
             <li class="clients-item">
               <img src="./img/1.jpg" alt="Inovite Service Pvt. Ltd.">
             </li>
-            <li class="clients-item">
+<!--             <li class="clients-item">
               <img src="./img/2.jpg" alt="ViziSmart">
             </li>
             <li class="clients-item">
@@ -496,7 +496,7 @@ Working with Pratik has been an outstanding experience. His ability to break dow
             </li>
             <li class="clients-item">
                 <img src="./img/8.jpg" alt="Insurance Tech Hub">
-            </li>
+            </li> -->
 
           </ul>
 
