--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ My job is to analyze complex data and build models that drive smarter decisions 
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/mysql-opened.svg" alt="mobile app icon" width="40">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVZPVweW7NpCOaRNC1znc5DTY70Eaecz0w0w&s" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
