change the link of git and linkdin

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </li> -->
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/rxjpatil" target="_blank" class="social-link">
+            <a href="https://www.linkedin.com/in/pratik-gaigole/" target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -157,7 +157,7 @@
           </li> -->
 
           <li class="social-item">
-            <a href="https://github.com/rxjpatil" target="_blank" class="social-link">
+            <a href="https://github.com/PratikGaigole" target="_blank" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
