--- a/index.html
+++ b/index.html
@@ -721,11 +721,11 @@ Contributed to the development of internal web tools and dashboards, focusing on
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Data Analytics</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Data Science</button>
             </li>
 
             <li class="filter-item">
