update the education section

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="data analytics">
               <a href="https://visionacademy.pythonanywhere.com/">
 
                 <figure class="project-img">
@@ -790,7 +790,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="data analytics">
               <a href="https://visionacad.pythonanywhere.com/">
 
                 <figure class="project-img">
@@ -808,7 +808,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="data analytics">
               <a href="#">
 
                 <figure class="project-img">
@@ -826,7 +826,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="data science">
               <a href="#">
 
                 <figure class="project-img">
@@ -844,7 +844,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="data analytics">
               <a href="#">
 
                 <figure class="project-img">
@@ -862,7 +862,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="data analytics">
               <a href="#">
 
                 <figure class="project-img">
@@ -880,7 +880,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="data analytics">
               <a href="#">
 
                 <figure class="project-img">
@@ -898,7 +898,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="data science">
               <a href="#">
 
                 <figure class="project-img">
@@ -916,7 +916,7 @@ Contributed to the development of internal web tools and dashboards, focusing on
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="data analytics">
               <a href="#">
 
                 <figure class="project-img">
@@ -1193,3 +1193,4 @@ Course with AWS by Vedant, covering front-end, back-end, and cloud deployment.  
 </body>
 
 </html>
+
