Update the educational changes

--- a/index.html
+++ b/index.html
@@ -532,24 +532,26 @@ Working with Pratik has been an outstanding experience. His ability to break dow
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">College of Engineering & Technology, Akola</h4>
+              <h4 class="h4 timeline-item-title">Dr. D.Y. Patil Institute of Engineering, Management & Research, Akurdi, Pune</h4>
 
-              <span>2019 — 2023</span>
+              <span>2020 — 2024</span>
 
               <p class="timeline-text">
-                Earned an engineering degree specializing in Information Technology. Developed skills in web development, with a passion sparked by driving enthusiasm for dynamic solutions.
+                Earned a Bachelor's degree in Mechanical Engineering.  
+            Gained strong analytical and technical skills while building a deep interest in AI and data-driven technologies.  
+            Passionate about leveraging data science to solve real-world problems with intelligent solutions.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Shri Samartha College of Junior Science</h4>
+              <h4 class="h4 timeline-item-title">Prohadhan Science College</h4>
 
-              <span>2017 — 2019</span>
+              <span>2018 — 2020</span>
 
               <p class="timeline-text">
-                Completed high school with a focus on PCMB, laying a strong foundation in analytical skills and fostering a deep appreciation for the sciences, driving ongoing curiosity in learning.
+                Completed Higher Secondary Education with PCMB stream (Physics, Chemistry, Mathematics, and Biology). Built strong fundamentals in scientific reasoning, logical thinking, and numerical aptitude, laying the groundwork for future technical and analytical skills.
               </p>
 
             </li>
@@ -558,7 +560,7 @@ Working with Pratik has been an outstanding experience. His ability to break dow
 
               <h4 class="h4 timeline-item-title">Khandelwal English High School</h4>
 
-              <span>2016 — 2017</span>
+              <span>2017 — 2018</span>
 
               <p class="timeline-text">
                 Completed foundational education, emphasizing essential skills like time management and effective communication, fostering a commitment to excellence and continuous learning.
